# Vec-Boolean

./: .project  Vec-Boolean.cabal
src/Data/Vec/: Boolean.hs
