name:                Vec-Boolean
version:             1.0.7
cabal-version:       >= 1.18
build-type:          Simple
license:             BSD3
copyright:           Tobias Bexelius
maintainer:          Tobias Bexelius
synopsis:            Provides Boolean instances for the Vec package
description:         This package adds instances for the classes IfB and EqB in the Boolean package for the fixed length list data type in the Vec package.
             These intances are useful for example when using the GPipe package.
category:            Math, Data
author:              Tobias Bexelius
library 
  build-depends:   
                   Vec         >= 1.0.5 && <2.0,
                   base        >= 4.7   && <5,
                   Boolean     >= 0.2.3 && <0.3
  default-language: Haskell2010
  hs-source-dirs:  src
  ghc-options:     -Wall
  exposed-modules: Data.Vec.Boolean

